--- a/README
+++ b/README
@@ -1,16 +1,5 @@
-Chemistry/File/Mopac version 0.01
+Chemistry/File/Mopac version 0.10
 =================================
-
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
-
-A README file is required for CPAN modules since CPAN extracts the
-README file from a module distribution so that people browsing the
-archive can use it get an idea of the modules uses. It is usually a
-good idea to provide version information here so that people can
-decide whether fixes for the module are worth downloading.
 
 INSTALLATION
 
@@ -24,14 +13,13 @@ To install this module type the following:
 DEPENDENCIES
 
 This module requires these other modules and libraries:
+        "Chemistry::Mol" => "0.20",
+        "Chemistry::InternalCoords" => '0.10',
+        "List::Util" => 0,
 
-  blah blah blah
+COPYRIGHT AND LICENSE
 
-COPYRIGHT AND LICENCE
-
-Put the correct copyright and licence information here.
-
-Copyright (C) 2003 Ivan Tubert
+Copyright (C) 2004 Ivan Tubert
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself. 
